chore(9): getting restaurants with menus and sorting